[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/Village/OreBuilding.gd" type="Script" id=1]
[ext_resource path="res://UIpack/UI/blue_button13.png" type="Texture" id=2]
[ext_resource path="res://UIpack/UI/blue_button04.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Village/Building_ProgBar.gd" type="Script" id=4]
[ext_resource path="res://Tileset/BuildingSprites.tres" type="TileSet" id=5]
[ext_resource path="res://Scripts/Village/BldgImg.gd" type="Script" id=6]
[ext_resource path="res://Scripts/Village/level2_oreimg.gd" type="Script" id=7]
[ext_resource path="res://UIpack/UI/grey_button00.png" type="Texture" id=8]
[ext_resource path="res://UIpack/UI/red_button00.png" type="Texture" id=9]
[ext_resource path="res://Scripts/Village/Levelupbar_ore.gd" type="Script" id=10]

[node name="OreBuilding" type="Sprite"]

position = Vector2( 535.987, 257.111 )
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Building_UI" type="Control" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -116.0
margin_top = -117.0
margin_right = 122.0
margin_bottom = 101.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Building_ProgBar" type="TextureProgress" parent="Building_UI" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 22.0
margin_top = 6.0
margin_right = 212.0
margin_bottom = 55.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
texture_under = ExtResource( 2 )
texture_over = null
texture_progress = ExtResource( 3 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
script = ExtResource( 4 )
_sections_unfolded = [ "Textures" ]

[node name="Building_Name" type="RichTextLabel" parent="Building_UI" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 70.0
margin_top = 176.0
margin_right = 220.0
margin_bottom = 225.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "OreBuilding"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false

[node name="BldgImg" type="TileMap" parent="." index="1"]

mode = 0
tile_set = ExtResource( 5 )
cell_size = Vector2( 18, 18 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -131078, 4, 0, -131077, 4, 0, -131076, 2, 0, -131075, 2, 0, -131074, 2, 0, -131073, 2, 0, -196608, 2, 0, -196607, 2, 0, -196606, 2, 0, -196605, 2, 0, -196604, 4, 0, -196603, 4, 0, -65542, 4, 0, -65541, 2, 0, -65540, 2, 0, -65539, 2, 0, -65538, 2, 0, -65537, 2, 0, -131072, 2, 0, -131071, 2, 0, -131070, 2, 0, -131069, 2, 0, -131068, 2, 0, -131067, 4, 0, -6, 4, 0, -5, 2, 0, -4, 2, 0, -3, 2, 0, -2, 2, 0, -1, 2, 0, -65536, 2, 0, -65535, 2, 0, -65534, 2, 0, -65533, 2, 0, -65532, 2, 0, -65531, 4, 0, 65530, 4, 0, 65531, 2, 0, 65532, 2, 0, 65533, 2, 0, 65534, 2, 0, 65535, 2, 0, 0, 2, 0, 1, 2, 0, 2, 2, 0, 3, 2, 0, 4, 2, 0, 5, 4, 0, 131066, 4, 0, 131067, 4, 0, 131068, 2, 0, 131069, 2, 0, 131070, 2, 0, 131071, 2, 0, 65536, 2, 0, 65537, 2, 0, 65538, 2, 0, 65539, 2, 0, 65540, 4, 0, 65541, 4, 0, 196603, 4, 0, 196604, 2, 0, 196605, 2, 0, 196606, 2, 0, 196607, 2, 0, 131072, 2, 0, 131073, 2, 0, 131074, 2, 0, 131075, 2, 0, 131076, 4, 0 )
script = ExtResource( 6 )
_sections_unfolded = [ "Cell" ]

[node name="LevelupScheme" type="Control" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="level2_oreimg" type="TileMap" parent="LevelupScheme" index="0"]

mode = 0
tile_set = ExtResource( 5 )
cell_size = Vector2( 18, 18 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -655366, 2, 0, -655365, 2, 0, -655364, 2, 0, -655363, 2, 0, -655362, 2, 0, -655361, 2, 0, -720896, 2, 0, -720895, 2, 0, -720894, 2, 0, -720893, 2, 0, -720892, 2, 0, -720891, 2, 0, -589830, 2, 0, -589829, 2, 0, -589828, 4, 0, -589827, 4, 0, -589826, 4, 0, -589825, 4, 0, -655360, 4, 0, -655359, 4, 0, -655358, 4, 0, -655357, 4, 0, -655356, 2, 0, -655355, 2, 0, -524294, 2, 0, -524293, 2, 0, -524292, 4, 0, -524291, 2, 0, -524290, 2, 0, -524289, 2, 0, -589824, 2, 0, -589823, 2, 0, -589822, 2, 0, -589821, 4, 0, -589820, 2, 0, -589819, 2, 0, -458758, 2, 0, -458757, 2, 0, -458756, 4, 0, -458755, 2, 0, -458754, 2, 0, -458753, 2, 0, -524288, 2, 0, -524287, 2, 0, -524286, 2, 0, -524285, 4, 0, -524284, 2, 0, -524283, 2, 0, -393222, 2, 0, -393221, 2, 0, -393220, 4, 0, -393219, 2, 0, -393218, 2, 0, -393217, 2, 0, -458752, 2, 0, -458751, 2, 0, -458750, 2, 0, -458749, 4, 0, -458748, 2, 0, -458747, 2, 0, -327686, 2, 0, -327685, 2, 0, -327684, 4, 0, -327683, 2, 0, -327682, 2, 0, -327681, 2, 0, -393216, 2, 0, -393215, 2, 0, -393214, 2, 0, -393213, 4, 0, -393212, 2, 0, -393211, 2, 0, -262150, 2, 0, -262149, 2, 0, -262148, 4, 0, -262147, 4, 0, -262146, 4, 0, -262145, 4, 0, -327680, 4, 0, -327679, 4, 0, -327678, 4, 0, -327677, 4, 0, -327676, 2, 0, -327675, 2, 0, -196614, 2, 0, -196613, 2, 0, -196612, 2, 0, -196611, 2, 0, -196610, 2, 0, -196609, 2, 0, -262144, 2, 0, -262143, 2, 0, -262142, 2, 0, -262141, 2, 0, -262140, 2, 0, -262139, 2, 0, -196605, 2, 0, -196604, 2, 0 )
script = ExtResource( 7 )
_sections_unfolded = [ "Cell" ]

[node name="Levelupbar_ore" type="TextureProgress" parent="LevelupScheme" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -96.0
margin_top = -253.0
margin_right = 94.0
margin_bottom = -208.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
texture_under = ExtResource( 8 )
texture_over = null
texture_progress = ExtResource( 9 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
script = ExtResource( 10 )
_sections_unfolded = [ "Textures" ]

[connection signal="upgrade_ore_building" from="." to="LevelupScheme/Levelupbar_ore" method="_on_OreBuilding_upgrade_ore_building"]

[connection signal="building_complete" from="Building_UI/Building_ProgBar" to="." method="_on_Building_ProgBar_building_complete"]

[connection signal="building_complete" from="Building_UI/Building_ProgBar" to="BldgImg" method="_on_Building_ProgBar_building_complete"]

[connection signal="upgrade_ore_bldg_complete" from="LevelupScheme/Levelupbar_ore" to="." method="_on_Levelupbar_ore_upgrade_ore_bldg_complete"]

[connection signal="upgrade_ore_bldg_complete" from="LevelupScheme/Levelupbar_ore" to="LevelupScheme/level2_oreimg" method="_on_Levelupbar_ore_upgrade_ore_bldg_complete"]


